<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_padding">

    <TextView
        android:id="@+id/_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/user"
        app:layout_constraintStart_toEndOf="@id/_user"
        app:layout_constraintTop_toTopOf="@id/_user" />

    <TextView
        android:id="@+id/_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/sign_in_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@id/_date"
        app:layout_constraintTop_toTopOf="@id/_date" />
</androidx.constraintlayout.widget.ConstraintLayout>